[package]
edition = "2021"
name = "greeting"
version = "0.1.0"

[dependencies]
fluentbase-sdk ={git = "https://github.com/fluentlabs-xyz/fluentbase", default-features = false }


[dev-dependencies]
fluentbase-sdk = {git = "https://github.com/fluentlabs-xyz/fluentbase", features = ["std"], default-features =  false }
hex-literal = "0.4.1"
hex = "0.4.2"



[lib]
crate-type = ["cdylib", "staticlib"]
path = "lib.rs"

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[features]
default = []
std = [
  "fluentbase-sdk/std",
]
